<resources>
    <string name="app_name">CID_Notify</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_confirm_new_password">Confirm new password</string>
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_update_password">Update password</string>
    <string name="title_activity_devices">Devices</string>
    <string name="title_activity_black_list">Black list</string>
    <string name="title_activity_about">About us</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_cellphone">This cellphone number is invalid</string>
    <string name="error_invalid_birthday">This date is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="logout">Log out</string>
    <string name="update_your_password">Update your password</string>
    <string name="email_not_verified">Email hasn\'t been verified</string>
    <string name="send_verification_mail">Verification mail has been sent</string>
    <string name="can_not_send_verification_mail">Verification mail can\'t been sent</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="btn_link_to_login">Already registered. Login me!</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="auth_failed">Login failed</string>
    <string name="auth_success">Login success</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="new_call">New call : %1$s</string>
    <string name="arrow" translatable="false">%1$s → %2$s</string>
    <string name="title_activity_reset_second_password">Reset second password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="device_model">Model : %1$s</string>
    <string name="device_login_time">Login time : %1$s</string>
    <string name="notification_of_off">Notification : %1$s</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete?</string>
    <string name="reset">Reset</string>
    <string name="forgot">Forgot</string>
    <string name="second_password">Second password</string>
    <string name="new_second_password">New second password</string>
    <string name="contact_permission">Contact permission must be allowed to display data.</string>
    <string name="block_this_number">Block this number</string>
    <string name="logout_this_device">Logout this device?</string>
    <string name="automatic_block">Automatic block</string>
    <string name="automatic_block_description">Automatic blocking of suspicious calls</string>
    <string name="cellphone_number">Cellphone number</string>
    <string name="birthday">Birthday e.g.19701001</string>
    <string name="im_ready">I\'m ready!</string>
    <string name="important">*IMPORTANT*</string>
    <string name="reset_email_failed">Failed to send reset email</string>
    <string name="send_reset_email">We have sent you instructions to reset your password</string>
    <string name="second_password_description">You must use a second password when you need to change your password or set some sensitive feature of an appliance. \\n\\nIf you accidentally forget the second password, you cna reset it through your cellphone number and birthday.</string>
</resources>
